# molquest

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
case_studies/04dbc4ee/: README.md  generate_figure.py
config/: settings.yaml
data/: examples.json  molecules_final.json
results/agent/: collect_results.py  common_uuids.json  model_comparison.csv
results/agent/claude-haiku-4.5/: claude-haiku-4.5_evaluated.json  claude-haiku-4.5_evaluation_report.md  claude-haiku-4.5_merged_runs.json
results/agent/claude-opus-4.5/: claude-opus-4.5_evaluated.json  claude-opus-4.5_evaluation_report.md  claude-opus-4.5_merged_runs.json
results/agent/claude-opus-4.5-thinking/: claude-opus-4.5-thinking_evaluated.json  claude-opus-4.5-thinking_evaluation_report.md  claude-opus-4.5-thinking_merged_runs.json  claude-opus-4.5-thinking_metrics.json
results/agent/claude-sonnet-4.5/: claude-sonnet-4.5_evaluated.json  claude-sonnet-4.5_evaluation_report.md  claude-sonnet-4.5_merged_runs.json
results/baseline/: model_comparison.csv  plot_results.py
scripts/: batch_run.py
scripts/analyze/: batch_evaluate.py  calculate_paper_metrics.py  evaluate_predictions.py  merge_runs.py  plot_model_comparison.py  plot_paper_figures.py
scripts/utils/: check_molecule_runs.py  clean_runs.py  copy_intersection_runs.py  fix_results.py  scan_traces.py
src/agent/: chem_detective.py  state.py
src/core/: agent.py  completion_adapter.py  logger.py  registry.py  tool.py
src/utils/: csv_to_molecule_json.py  molecule_manager.py  molecule_types.py  trace.py  validate_molecules_json.py
(+13472 files in other folders)
