[project]
name = "molquest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.1.3",
    "langchain-openai>=0.1.20",
    "langchain-google-genai>=0.0.6",
    "langgraph>=1.0.4",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.3",
    "rdkit>=2025.9.3",
    "pandas",
    "matplotlib",
    "seaborn",
    "numpy",
    "scikit-learn"
]
